update some things
