# Backend/25-StockApi-2/src/routes/auth.js
@@ -1,16 +1,15 @@
-"use strict";
+"use strict"
 /* -------------------------------------------------------
-| FULLSTACK TEAM | NODEJS / EXPRESS |
+    | FULLSTACK TEAM | NODEJS / EXPRESS |
 ------------------------------------------------------- */
-const router = require("express").Router();
-const { login, refresh, logout } = require("../controllers/auth");
-
+const router = require('express').Router();
+const { login, refresh, logout } = require('../controllers/auth')
 /* ------------------------------------------------------- */
 
-// URL -> /auth
+// URL-> /auth
 
-router.post("/login", login);
-router.post("/refresh", refresh);
-router.post("/logout", logout);
+router.post('/login', login);
+router.post('/refresh', refresh);
+router.post('/logout', logout);
 
 module.exports = router;
